Added production target and set up schema generation macro.

--- a/profiles.yml
+++ b/profiles.yml
@@ -8,3 +8,10 @@ lumley-analytics:
       dataset: dbt_dev
       threads: 4 # Must be a value of 1 or greater
       keyfile: lumley-analytics-9aabdf12ee21.json
+    prod:
+      type: bigquery
+      method: service-account
+      project: lumley-analytics
+      dataset: dbt_prod
+      threads: 4 # Must be a value of 1 or greater
+      keyfile: lumley-analytics-9aabdf12ee21.json
