--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -22,18 +22,24 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
+      - name: Configure Docker to Use Artifact Registry
+        run: |
+          gcloud auth configure-docker us-east4-docker.pkg.dev
+
       - name: Build and Push Docker Image
         env:
           PROJECT_ID: "lumley-analytics"
+          REPO_NAME: "lumley-analytics-dbt"  # Set your Artifact Registry repository name here
         run: |
-          docker build -t gcr.io/$PROJECT_ID/lumley-analytics-dbt-snapshot .
-          docker push gcr.io/$PROJECT_ID/lumley-analytics-dbt-snapshot
+          docker build -t us-east4-docker.pkg.dev/$PROJECT_ID/$REPO_NAME/lumley-analytics-dbt-snapshot .
+          docker push us-east4-docker.pkg.dev/$PROJECT_ID/$REPO_NAME/lumley-analytics-dbt-snapshot
 
       - name: Deploy Cloud Run Job
         env:
           PROJECT_ID: "lumley-analytics"
-          REGION: "us-east4"  # Update with your Cloud Run region
+          REGION: "us-east4"  # Ensure this matches your Artifact Registry and Cloud Run region
+          REPO_NAME: "lumley-analytics-dbt"
         run: |
           gcloud run jobs update dbt-snapshot-job \
-            --image gcr.io/$PROJECT_ID/lumley-analytics-dbt-snapshot \
+            --image us-east4-docker.pkg.dev/$PROJECT_ID/$REPO_NAME/lumley-analytics-dbt-snapshot \
             --region $REGION
