--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,17 +19,19 @@ jobs:
         with:
           credentials_json: ${{ secrets.GCP_SA_KEY }}
 
+      - name: Create Service Account Key File
+        env:
+          GCP_SA_KEY: ${{ secrets.GCP_SA_KEY }}
+        run: |
+          echo "$GCP_SA_KEY" | base64 -d > lumley-analytics-9aabdf12ee21.json
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
-
-      - name: Configure Docker to Use Artifact Registry
-        run: |
-          gcloud auth configure-docker us-east4-docker.pkg.dev
 
       - name: Build and Push Docker Image
         env:
           PROJECT_ID: "lumley-analytics"
-          REPO_NAME: "lumley-analytics-dbt"  # Set your Artifact Registry repository name here
+          REPO_NAME: "lumley-analytics-dbt"
         run: |
           docker build -t us-east4-docker.pkg.dev/$PROJECT_ID/$REPO_NAME/lumley-analytics-dbt-snapshot .
           docker push us-east4-docker.pkg.dev/$PROJECT_ID/$REPO_NAME/lumley-analytics-dbt-snapshot
@@ -37,9 +39,9 @@ jobs:
       - name: Deploy Cloud Run Job
         env:
           PROJECT_ID: "lumley-analytics"
-          REGION: "us-east4"  # Ensure this matches your Artifact Registry and Cloud Run region
+          REGION: "us-east4"
           REPO_NAME: "lumley-analytics-dbt"
         run: |
-          gcloud run jobs update lumley-analytics-dbt \
+          gcloud run jobs update dbt-snapshot-job \
             --image us-east4-docker.pkg.dev/$PROJECT_ID/$REPO_NAME/lumley-analytics-dbt-snapshot \
             --region $REGION
