--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -23,6 +23,10 @@ jobs:
         run: |
           gcloud auth configure-docker us-east4-docker.pkg.dev
 
+      - name: Show gcloud auths
+        run: |
+          gcloud auth list
+
       - name: Create Service Account Key File
         env:
           GCP_SA_KEY: ${{ secrets.GCP_SA_KEY }}
