--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,6 +19,10 @@ jobs:
         with:
           credentials_json: ${{ secrets.GCP_SA_KEY }}
 
+      - name: gcloud auth
+        run: |
+          gcloud auth login
+
       - name: Configure Docker to Use Artifact Registry
         run: |
           gcloud auth configure-docker us-east4-docker.pkg.dev
