--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,24 +14,24 @@ jobs:
       - name: Check out the repo
         uses: actions/checkout@v2
 
-      - name: Authenticate to Google Cloud
-        uses: google-github-actions/auth@v1
-        with:
-          credentials_json: ${{ secrets.GCP_SA_KEY }}
-
-      - name: gcloud auth
+      - name: Set up Google Cloud Authentication
+        env:
+          GCP_SA_KEY: ${{ secrets.GCP_SA_KEY }}
         run: |
-          gcloud auth login
+          echo "$GCP_SA_KEY" | base64 -d > /tmp/gha-creds.json
+          gcloud auth activate-service-account --key-file=/tmp/gha-creds.json
+          gcloud config set project lumley-analytics
+
+      - name: Verify Authentication
+        run: |
+          gcloud auth list
+          gcloud config list
 
       - name: Configure Docker to Use Artifact Registry
         run: |
           gcloud auth configure-docker us-east4-docker.pkg.dev
 
-      - name: Show gcloud auths
-        run: |
-          gcloud auth list
-
-      - name: Create Service Account Key File
+      - name: Create Service Account Key File for Docker
         env:
           GCP_SA_KEY: ${{ secrets.GCP_SA_KEY }}
         run: |
