--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -27,9 +27,18 @@ jobs:
           gcloud auth list
           gcloud config list
 
-      - name: Configure Docker to Use Artifact Registry
+      - name: Debug Artifact Registry Permissions
+        run: |
+          gcloud artifact-registry repositories list --location=us-east4
+
+      - name: Reconfigure Docker Auth for Artifact Registry
         run: |
           gcloud auth configure-docker us-east4-docker.pkg.dev
+          cat ~/.docker/config.json  # Confirm Docker is configured for Artifact Registry
+
+      - name: Test Docker Pull from Artifact Registry (Debugging)
+        run: |
+          docker pull us-east4-docker.pkg.dev/lumley-analytics/lumley-analytics-dbt/nonexistent-image || echo "Expected error due to nonexistent image"
 
       - name: Create Service Account Key File for Docker
         env:
@@ -47,13 +56,3 @@ jobs:
         run: |
           docker build -t us-east4-docker.pkg.dev/$PROJECT_ID/$REPO_NAME/lumley-analytics-dbt-snapshot .
           docker push us-east4-docker.pkg.dev/$PROJECT_ID/$REPO_NAME/lumley-analytics-dbt-snapshot
-
-      - name: Deploy Cloud Run Job
-        env:
-          PROJECT_ID: "lumley-analytics"
-          REGION: "us-east4"
-          REPO_NAME: "lumley-analytics-dbt"
-        run: |
-          gcloud run jobs update dbt-snapshot-job \
-            --image us-east4-docker.pkg.dev/$PROJECT_ID/$REPO_NAME/lumley-analytics-dbt-snapshot \
-            --region $REGION
