--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -46,6 +46,6 @@ jobs:
           REGION: "us-east4"
           REPO_NAME: "lumley-analytics-dbt"
         run: |
-          gcloud run jobs update dbt-snapshot-job \
+          gcloud run jobs update lumley-analytics-dbt \
             --image us-east4-docker.pkg.dev/$PROJECT_ID/$REPO_NAME/lumley-analytics-dbt-snapshot \
             --region $REGION
