trying to rename this job

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -44,8 +44,8 @@ jobs:
         env:
           PROJECT_ID: "lumley-analytics"
           REGION: "us-east4"
-          REPO_NAME: "lumley-analytics-dbt"
+          REPO_NAME: "lumley-analytics-dbt-snapshot"
         run: |
-          gcloud run jobs update lumley-analytics-dbt \
+          gcloud run jobs update lumley-analytics-dbt-snapshot \
             --image us-east4-docker.pkg.dev/$PROJECT_ID/$REPO_NAME/lumley-analytics-dbt-snapshot \
             --region $REGION
