--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Build and Push Docker Image
         env:
           PROJECT_ID: "lumley-analytics"
-          REPO_NAME: "lumley-analytics-dbt"
+          REPO_NAME: "lumley-analytics-dbt-snapshot"
         run: |
           docker build -t us-east4-docker.pkg.dev/$PROJECT_ID/$REPO_NAME/lumley-analytics-dbt-snapshot .
           docker push us-east4-docker.pkg.dev/$PROJECT_ID/$REPO_NAME/lumley-analytics-dbt-snapshot
