--- a/.github/workflows/dbt_prod_build_and_run.yml
+++ b/.github/workflows/dbt_prod_build_and_run.yml
@@ -26,6 +26,11 @@ jobs:
           source env/bin/activate
           pip install dbt-core dbt-bigquery  # Add other adapters as needed
 
+      - name: Install dbt Packages
+        run: |
+          source env/bin/activate
+          dbt deps  # Install dependencies from packages.yml
+
       - name: Run dbt Build (Prod)
         run: |
           source env/bin/activate
