only run the docker-image-snapshot action if there are changes to the snapshots folder

--- a/.github/workflows/docker-image-snapshot.yml
+++ b/.github/workflows/docker-image-snapshot.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches:
       - main
+    paths:
+      - 'snapshots/**'  # Only trigger if there are changes in the snapshots folder
   workflow_dispatch:
 
 jobs:
