well here's a different thing we're trying

--- a/.github/workflows/dbt_docs_generate_with_gh_pages_update.yml
+++ b/.github/workflows/dbt_docs_generate_with_gh_pages_update.yml
@@ -42,15 +42,15 @@ jobs:
           dbt docs generate
 
       - name: Publish to gh-pages
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          # Create a new repo in the target directory and push to gh-pages
+          # Initialize a new repo in the target folder and push to gh-pages
           cd target
           git init
           git config user.name "GitHub Actions"
           git config user.email "actions@github.com"
           git add .
           git commit -m "Update dbt docs"
-          # Push to the gh-pages branch
-          git push --force --quiet "https://${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git" HEAD:gh-pages
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          git branch -M gh-pages
+          git push --force --quiet "https://${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git" gh-pages
