--- a/.github/workflows/dbt_docs_generate_with_gh_pages_update.yml
+++ b/.github/workflows/dbt_docs_generate_with_gh_pages_update.yml
@@ -54,4 +54,5 @@ jobs:
           git add .
           git commit -m "Update dbt docs"
           # Use GitHub token to push to gh-pages branch
-          git push --force "https://${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git" HEAD:gh-pages
+          git remote add origin "https://${{ secrets.GITHUB_TOKEN }}@github.com/lumleyanalytics/lumley_analytics.git"
+          git push --force origin master:gh-pages
