--- a/.github/workflows/dbt_docs_generate_with_gh_pages_update.yml
+++ b/.github/workflows/dbt_docs_generate_with_gh_pages_update.yml
@@ -45,7 +45,7 @@ jobs:
 
       - name: Configure Git and Push to gh-pages
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GH_PAT: ${{ secrets.GH_PAT }}
         run: |
           cd target
           git init
@@ -53,6 +53,6 @@ jobs:
           git config user.email "actions@github.com"
           git add .
           git commit -m "Update dbt docs"
-          # Use GitHub token to push to gh-pages branch
-          git remote add origin "https://${{ secrets.GITHUB_TOKEN }}@github.com/lumleyanalytics/lumley_analytics.git"
+          # Use GH_PAT token to push to gh-pages branch
+          git remote add origin "https://${{ secrets.GH_PAT }}@github.com/lumleyanalytics/lumley_analytics.git"
           git push --force origin master:gh-pages
